--- a/.github/workflows/upload-to-loadly.yml
+++ b/.github/workflows/upload-to-loadly.yml
@@ -1,30 +1,28 @@
-name: Build & Upload to Loadly
-
-on:
-  push:
-    branches: [ main ]
-
 jobs:
   upload:
-    runs-on: ubuntu-latest
-
+    runs-on: macos-latest      # ← đổi từ ubuntu-latest
     steps:
-      # 1. Checkout code
       - uses: actions/checkout@v3
 
-      # 2. Build .ipa (tuỳ project bạn thay lệnh build)
+      - name: Setup signing certs
+        # nếu bạn cần import .p12 + mobileprovision vào keychain
+        run: |
+          security create-keychain -p "" build.keychain
+          security import ./certs/ios_dist.p12 -k build.keychain -P "${{ secrets.P12_PASSWORD }}" -T /usr/bin/codesign
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp ./certs/profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
+
       - name: Build iOS IPA
         run: |
           xcodebuild -workspace MyApp.xcworkspace \
                      -scheme MyApp \
-                     -archivePath ${{ github.workspace }}/MyApp.xcarchive \
+                     -archivePath $PWD/MyApp.xcarchive \
                      archive
           xcodebuild -exportArchive \
-                     -archivePath ${{ github.workspace }}/MyApp.xcarchive \
+                     -archivePath $PWD/MyApp.xcarchive \
                      -exportOptionsPlist ExportOptions.plist \
-                     -exportPath ${{ github.workspace }}/build
+                     -exportPath $PWD/build
 
-      # 3. Lấy appKey & buildKey (nếu bạn muốn tự động)
       - name: Fetch Loadly appKey
         env:
           LOADLY_API_KEY: ${{ secrets.LOADLY_API_KEY }}
@@ -33,11 +31,9 @@ jobs:
             -d "_api_key=$LOADLY_API_KEY")
           echo "APP_KEY=$(echo $resp | jq -r '.data[0].appKey')" >> $GITHUB_ENV
 
-      # 4. Upload file lên Loadly
       - name: Upload to Loadly.io
         env:
           LOADLY_API_KEY: ${{ secrets.LOADLY_API_KEY }}
-          APP_KEY: ${{ env.APP_KEY }}
         run: |
           curl -X POST https://api.loadly.io/apiv2/app/upload \
             -F "_api_key=$LOADLY_API_KEY" \
